--- a/templates/elaadmin-master/index.html
+++ b/templates/elaadmin-master/index.html
@@ -268,7 +268,7 @@
                 <!-- Orders -->
                 <div class="orders">
                     <div class="row">
-                        <div class="col-xl-8">
+                        <div class="col-xl-10">
                             <div class="card">
                                 <div class="card-body">
                                     <h4 class="box-title">Subjects of this week</h4>
@@ -381,7 +381,7 @@
                             </div> <!-- /.card -->
                         </div> <!-- /.col-lg-8 -->
                         <!-- Widgets  -->
-                        <div class="col-lg-4">
+                        <div class="col-lg-2">
                             <div class="card">
                                 <div class="card-body">
                                     <div class="stat-widget-five">
@@ -398,6 +398,7 @@
                                 </div>
                             </div>
 
+<!--
                             <div class="card">
                                 <div class="card-body">
                                     <div class="stat-widget-five">
@@ -413,7 +414,7 @@
                                     </div>
                                 </div>
                             </div>
-
+-->
                             <div class="card">
                                 <div class="card-body">
                                     <div class="stat-widget-five">
@@ -513,6 +514,7 @@
 
                     <div class="col-lg-6">
                         <div class="card">
+<!--
                             <div class="card-body">
                                 <h4 class="card-title box-title">Live Chat</h4>
                                 <div class="card-content">
@@ -534,7 +536,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                </div><!-- /.msg-received -->
+                                                </div>
                                             </li>
                                             <li>
                                                 <div class="msg-sent msg-container">
@@ -552,7 +554,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                </div><!-- /.msg-sent -->
+                                                </div>
                                             </li>
                                         </ul>
                                         <div class="send-mgs">
@@ -563,10 +565,49 @@
                                                 <i class="pe-7s-paper-plane"></i>
                                             </button>
                                         </div>
-                                    </div><!-- /.messenger-box -->
+                                    </div>
                                 </div>
+                            </div> 
+-->
+                            <div class="card-body">
+                                <div class="progress-box progress-1">
+                                    <h4 class="por-title">DSN Recruitment Progress</h4>
+                                    <div class="por-txt">37 Young Adults (95%)</div>
+                                    <div class="progress mb-2" style="height: 5px;">
+                                        <div class="progress-bar bg-flat-color-1" role="progressbar" style="width: 95%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                    <div class="por-txt">3 Old Adults (40%)</div>
+                                    <div class="progress mb-2" style="height: 5px;">
+                                        <div class="progress-bar bg-flat-color-1" role="progressbar" style="width: 40%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                                <div class="progress-box progress-2">
+                                    <h4 class="por-title">ADM Recruitment Progress</h4>
+                                    <div class="por-txt">40 Old Adults (100%)</div>
+                                    <div class="progress mb-2" style="height: 5px;">
+                                        <div class="progress-bar bg-flat-color-2" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                                <!--
+                                <div class="progress-box progress-2">
+                                    <h4 class="por-title">Unique Visitors</h4>
+                                    <div class="por-txt">29,658 Users (60%)</div>
+                                    <div class="progress mb-2" style="height: 5px;">
+                                        <div class="progress-bar bg-flat-color-3" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                                <div class="progress-box progress-2">
+                                    <h4 class="por-title">Targeted  Visitors</h4>
+                                    <div class="por-txt">99,658 Users (90%)</div>
+                                    <div class="progress mb-2" style="height: 5px;">
+                                        <div class="progress-bar bg-flat-color-4" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                                -->
                             </div> <!-- /.card-body -->
-                        </div><!-- /.card -->
+                            
+                            
+                        </div>
                     </div>
                 </div>
                 <!-- /To Do and Live Chat -->
